--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Git Testing</title>
+  </head>
+  <body>
+    <h1>hello world</h1>
+    <p>Call me Ishmael.</p>
+  </body>
+</html>
